Added map features

--- a/vizmarathon.css
+++ b/vizmarathon.css
@@ -1,3 +1,19 @@
+path.country {
+	fill: rgba(255,255,255,1);
+	stroke: rgba(29,91,85,1);
+    stroke-width:  1;
+}
+
 path.countryOver{
-	fill: #ffffff;
+	fill: hsl(206,10%,75%);
+}
+
+text#tooltip{
+	font-family: Verdana;
+	font-size: 14px;
+	fill: #020202;
+}
+
+svg {
+	background-color: hsl(206,58%,95%);
 }
