--- a/vizmarathon.css
+++ b/vizmarathon.css
@@ -5,6 +5,7 @@ body, html{
 
 div.horizontal{
 	display:inline;
+	font-weight:bold;
 }
 
 path.country {
@@ -65,7 +66,6 @@ svg.map {
 #lltexthead{
 	font-size: 20px;
 }
-
 
 g#dialog{
 	fill: hsl(50,50%,80%);
